--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,11 @@
     href="https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@300;400;700&family=Montserrat:wght@200;400;500;700&display=swap"
     rel="stylesheet">
   <!-- google fonts -->
+  <!-- font awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+    integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- font awesome  -->
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
