--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@300;400;700&family=Montserrat:wght@200;400;500;700&display=swap"
     rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Comforter&display=swap" rel="stylesheet">
   <!-- google fonts -->
   <!-- font awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
